<resources>
    <string name="app_name">Todo</string>
    <string name="title_all_todos">All Todos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_new_todo">Add New Todo</string>
    <string name="title_edit_todo">Edit Todo</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="hint_todo_title">Todo title</string>
    <string name="hint_todo_description">Todo description</string>
    <string name="button_add">Add</string>
    <string name="choose_todo_location">Choose Todo Location</string>
    <string name="accept_location">Accept Location</string>
    <string name="chosen_location">Chosen Location</string>
</resources>
